# emptycabinet

./: Makefile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: tests.yml
emptycabinet/: main.py
emptycabinet/data/database/: db_init.py
emptycabinet/data/models/: cabinets.py  items.py  users.py
emptycabinet/data/schemas/: items.py  users.py
emptycabinet/dependencies/: user_auth.py
emptycabinet/routers/: products.py  users.py
migrations/: env.py
migrations/versions/: a4e8481c2a07_base_tables_created.py
tests/: test_helpers.py  test_main.py
